--- a/.github/workflows/pr-test-amd.yml
+++ b/.github/workflows/pr-test-amd.yml
@@ -28,6 +28,7 @@ jobs:
     if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
       github.event.pull_request.draft == false
     strategy:
+      fail-fast: false
       matrix:
         runner: [linux-mi300-gpu-1, linux-mi325-gpu-1]
     runs-on: ${{matrix.runner}}
@@ -54,6 +55,7 @@ jobs:
     if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false
     strategy:
+      fail-fast: false
       matrix:
         runner: [linux-mi300-gpu-2, linux-mi325-gpu-2, linux-mi35x-gpu-2]
     runs-on: ${{matrix.runner}}
@@ -78,6 +80,7 @@ jobs:
     if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
       github.event.pull_request.draft == false
     strategy:
+      fail-fast: false
       matrix:
         runner: [linux-mi300-gpu-1, linux-mi325-gpu-1]
     runs-on: ${{matrix.runner}}
@@ -102,6 +105,7 @@ jobs:
     if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false
     strategy:
+      fail-fast: false
       matrix:
         runner: [linux-mi300-gpu-1, linux-mi325-gpu-1]
     runs-on: ${{matrix.runner}}
@@ -142,6 +146,7 @@ jobs:
     if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
         github.event.pull_request.draft == false
     strategy:
+      fail-fast: false
       matrix:
         runner: [linux-mi300-gpu-1, linux-mi325-gpu-1]
     runs-on: ${{matrix.runner}}
@@ -176,6 +181,7 @@ jobs:
     if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
       github.event.pull_request.draft == false
     strategy:
+      fail-fast: false
       matrix:
         runner: [linux-mi300-gpu-2, linux-mi325-gpu-2]
     runs-on: ${{matrix.runner}}
@@ -271,6 +277,7 @@ jobs:
     if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
       github.event.pull_request.draft == false
     strategy:
+      fail-fast: false
       matrix:
         runner: [linux-mi300-gpu-2, linux-mi325-gpu-2]
     runs-on: ${{matrix.runner}}
@@ -295,6 +302,7 @@ jobs:
     if: (github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request') &&
       github.event.pull_request.draft == false
     strategy:
+      fail-fast: false
       matrix:
         runner: [linux-mi300-gpu-8]
     runs-on: ${{matrix.runner}}
