--- a/.github/workflows/pr-test-sgl-kernel.yml
+++ b/.github/workflows/pr-test-sgl-kernel.yml
@@ -32,7 +32,9 @@ jobs:
 
   build-wheels:
     if: github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request'
-    runs-on: sgl-kernel-build-node
+    # TODO temp hack
+#    runs-on: sgl-kernel-build-node
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
@@ -44,25 +46,27 @@ jobs:
             cuda-version: "12.9"
     name: Build Wheel (CUDA ${{ matrix.cuda-version }})
     steps:
-      - name: Cleanup
-        run: |
-          sudo rm -rf $GITHUB_WORKSPACE/* || true
-
-      - uses: actions/checkout@v4
-        with:
-          submodules: "recursive"
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
+#      - name: Cleanup
+#        run: |
+#          sudo rm -rf $GITHUB_WORKSPACE/* || true
+#
+#      - uses: actions/checkout@v4
+#        with:
+#          submodules: "recursive"
+#
+#      - name: Set up Python ${{ matrix.python-version }}
+#        uses: actions/setup-python@v5
+#        with:
+#          python-version: ${{ matrix.python-version }}
 
       - name: Build wheel for Python ${{ matrix.python-version }} and CUDA ${{ matrix.cuda-version }}
         if: github.event_name != 'push' || (matrix.cuda-version != '12.4' && matrix.cuda-version != '12.8')
         run: |
-          cd sgl-kernel
-          chmod +x ./build.sh
-          ./build.sh "${{ matrix.python-version }}" "${{ matrix.cuda-version }}"
+          mkdir -p sgl-kernel/dist
+          echo hello > sgl-kernel/dist/${{ matrix.python-version }}-cuda${{ matrix.cuda-version }}.txt
+#          cd sgl-kernel
+#          chmod +x ./build.sh
+#          ./build.sh "${{ matrix.python-version }}" "${{ matrix.cuda-version }}"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -70,72 +74,73 @@ jobs:
           name: wheel-python${{ matrix.python-version }}-cuda${{ matrix.cuda-version }}
           path: sgl-kernel/dist/*
 
-  unit-test:
-    if: github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request'
-    needs: build-wheels
-    runs-on: 1-gpu-runner
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: sgl-kernel/dist/
-          merge-multiple: true
-          pattern: wheel-python3.10-cuda12.9
-
-      - name: Install
-        run: |
-          bash scripts/ci/ci_install_dependency.sh
-          pip3 install torch==2.8.0 torchvision torchaudio --index-url https://download.pytorch.org/whl/test/cu126 && pip3 install pytest
-          pip3 uninstall sgl-kernel -y || true
-          pip3 install sgl-kernel/dist/*whl --force-reinstall --no-deps
-          pip3 list | grep sgl-kernel
-
-      - name: Run test
-        timeout-minutes: 30
-        run: |
-          cd sgl-kernel
-          pytest tests/
-
-      - name: Uninstall dependencies
-        run: |
-          pip3 uninstall sgl-kernel -y
-
-  mla-test:
-    if: github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request'
-    needs: build-wheels
-    runs-on: 1-gpu-runner
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: sgl-kernel/dist/
-          merge-multiple: true
-          pattern: wheel-python3.10-cuda12.9
-
-      - name: Install
-        run: |
-          bash scripts/ci/ci_install_dependency.sh
-          pip3 install torch==2.8.0 torchvision torchaudio --index-url https://download.pytorch.org/whl/test/cu126
-          pip3 uninstall sgl-kernel -y || true
-          pip3 install sgl-kernel/dist/*whl --force-reinstall --no-deps
-          pip3 list | grep sgl-kernel
-
-      - name: Run test
-        timeout-minutes: 30
-        run: |
-          cd test/srt
-          python3 test_mla_deepseek_v3.py
-
-      - name: Uninstall dependencies
-        run: |
-          pip3 uninstall sgl-kernel -y
+#  unit-test:
+#    if: github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request'
+#    needs: build-wheels
+#    runs-on: 1-gpu-runner
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Download artifacts
+#        uses: actions/download-artifact@v4
+#        with:
+#          path: sgl-kernel/dist/
+#          merge-multiple: true
+#          pattern: wheel-python3.10-cuda12.9
+#
+#      - name: Install
+#        run: |
+#          bash scripts/ci/ci_install_dependency.sh
+#          pip3 install torch==2.8.0 torchvision torchaudio --index-url https://download.pytorch.org/whl/test/cu126 && pip3 install pytest
+#          pip3 uninstall sgl-kernel -y || true
+#          pip3 install sgl-kernel/dist/*whl --force-reinstall --no-deps
+#          pip3 list | grep sgl-kernel
+#
+#      - name: Run test
+#        timeout-minutes: 30
+#        run: |
+#          cd sgl-kernel
+#          pytest tests/
+#
+#      - name: Uninstall dependencies
+#        run: |
+#          pip3 uninstall sgl-kernel -y
+#
+#  mla-test:
+#    if: github.repository == 'sgl-project/sglang' || github.event_name == 'pull_request'
+#    needs: build-wheels
+#    runs-on: 1-gpu-runner
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Download artifacts
+#        uses: actions/download-artifact@v4
+#        with:
+#          path: sgl-kernel/dist/
+#          merge-multiple: true
+#          pattern: wheel-python3.10-cuda12.9
+#
+#      - name: Install
+#        run: |
+#          bash scripts/ci/ci_install_dependency.sh
+#          pip3 install torch==2.8.0 torchvision torchaudio --index-url https://download.pytorch.org/whl/test/cu126
+#          pip3 uninstall sgl-kernel -y || true
+#          pip3 install sgl-kernel/dist/*whl --force-reinstall --no-deps
+#          pip3 list | grep sgl-kernel
+#
+#      - name: Run test
+#        timeout-minutes: 30
+#        run: |
+#          cd test/srt
+#          python3 test_mla_deepseek_v3.py
+#
+#      - name: Uninstall dependencies
+#        run: |
+#          pip3 uninstall sgl-kernel -y
 
   finish:
-    needs: [unit-test, mla-test, lint, build-wheels]
+#    needs: [unit-test, mla-test, lint, build-wheels]
+    needs: [lint, build-wheels]
     runs-on: ubuntu-latest
     steps:
       - name: Check all dependent job statuses
