--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -218,6 +218,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download artifacts
+        if: needs.check-changes.outputs.src == 'true'
         uses: actions/download-artifact@v4
         with:
           path: sgl-kernel/dist/
